[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teaml"
version = "0.0.27"
authors = [
  { name="Jesse Montrose", email="jesse@airelabs.com" },
]
description = "Aire Labs TEAml Parser"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/airelabsresearch/teaml"
Issues = "https://github.com/airelabsresearch/teaml/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = [
    "test*",
]

[tool.hatch.build]
exclude = [
  "test*",
]